--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section class="hero">
             <nav>
                 <img class="logo" src="src/images/mylogo2.png" atl="Sekou's logo"/>
-                <ul>
+                <ul id="nav-list">
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="#project">Projects</a></li>
                     <li><a href="#contact-me">Contact</a></li>
