--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         <footer id="contact-me">
             <h2>Contact me</h2>
             <p>sekou4991@icloud.com</p>
+
+            <h2>Support me</h2>
+            <a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a>
         </footer>
         
         <script src="src/app.js" async defer></script>
