--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
             <h2>Projects</h2>
             <div class="project-container">
 
-                <!--Project-->
+                <!--Project One -->
                 <div class="project-card"><img src="src\images\5th_season_app_land.jpg" class="project-image" alt="Project One Image"/>
                     <h3>Project One</h3>
-                    <p class="subtext">This is my project and some text. I really enjoy coding</p>
+                    <p class="subtext">The goal is to create an application that provides weather information to users. It took the whole summer to finally develop my first application and publish it on Google Play store. It is developed with React Native, Expo CLI and Visual Code Studio IDE. No major budget was necessary to build this application.</p>
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://play.google.com/store/apps/details?id=com.weather_app_5thseason&pli=1">View here</a></p>
                 </div>
-                <!--Project-->
+                <!--Project Two-->
                 <div class="project-card"><img src="src\images\5th_season_web.jpg" class="project-image" alt="Project Two Image"/>
                     <h3>Project Two</h3>
-                    <p class="subtext">This is my project and some text. I really enjoy coding</p>
+                    <p class="subtext">This project was the warm up for weather application. The website was created to make sure that laptop and desktop users have access to the website before the mobile application was made. I started this project during the Spring 2022 semester. At this moment, <b>you may not have access to this site </b> due to issues with deployment on github.</p>
                     <hr/>
                 <p class="subtext"><a class="project-link" href="https://100prein.github.io/fifthseasonweb.github.io/">View here</a></p>
                 </div>
-                <!--Project-->
+                <!--Project Three-->
                 <div class="project-card"><img src="src\images\mr_polar_bear.jpg" class="project-image" alt="Project Three Image"/>
                     <h3>Project Three</h3>
-                    <p class="subtext">This is my project and some text. I really enjoy coding</p>
+                    <p class="subtext">This project was for creating awareness about global warming. The project started in June 2021. The website is updated periodically. The website will include responsive and interactive features to encourage users to contribute to Global Warming prevention. Let’s do our part.</p>
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://100prein.github.io/">View here</a></p>
                 </div>
-                <!--Project-->
+                <!--Project Four-->
                 <div class="project-card"><img src="src\images\smoking_art_technology.jpg" class="project-image" alt="Project Four Image"/>
                     <h3>Project Four</h3>
-                    <p class="subtext">This is my project and some text. I really enjoy coding</p>
+                    <p class="subtext">My friend came up with an idea for creating a new business for us. I included some way to add images to the shopping cart and purchase them. The project started during Spring 2022. We are setting a plan to start our business.</p>
                     <hr/>
                     <p class="subtext"><a class="project-link" href="https://100prein.github.io/packetcodeofficial.github.io/">View here</a></p>
                 </div>
