--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <section class="sub-section" id="about-me">
             <div class="information">
                 <h2>About me</h2>
-                <p>My name is Sekou Traore. I am a Mobile Application, and Web Developer.</p>
+                <p>My name is Sekou Traore. I am a Mobile Application, <br> and Web Developer. I am currently a a sophomore at LaGuardia Community College.</p>
             </div>
             <div class="headshot-container">
-                <img class="headshot" src="src/images/sekou.jpg" alt="Sekou's photo"/>
+                <img class="headshot" src="src/images/sek2.jpg" alt="Sekou's photo"/>
             </div>
         </section>
         <section id="project" class="sub-section-alternative">
