Link to my media site

--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 
             <h2>Support me</h2>
             <a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a>
+            <a href="https://100prein.github.io/captcoldmedia.github.io/">Check out my Media Website</a>
+            <a href="">Check out my Arts</a>
         </footer>
         
         <script src="src/app.js" async defer></script>
