replaced image and code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p>My name is Sekou Traore. I am a Mobile Application, <br> and Web Developer. I am currently a a sophomore at LaGuardia Community College.</p>
             </div>
             <div class="headshot-container">
-                <img class="headshot" src="src/images/Sek2.JPG" alt="Sekou's photo"/>
+                <img class="headshot" src="src/images/sek2_edited.jpg" alt="Sekou's photo"/>
             </div>
         </section>
         <section id="project" class="sub-section-alternative">
