--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <p>sekou4991@icloud.com</p>
 
             <h2>Support me</h2>
-            <a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a>
+            <a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a><br>
             <a href="https://100prein.github.io/captcoldmedia.github.io/">Check out my Media Website</a><br/>
             <a href="">Check out my Arts</a>
         </footer>
