--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Sekou Traore</h1>
-                    <p>Full Stack Developer</p>  
+                    <p>Full Stack Developer</p>
+                    <a target="_blank" href="resumeSD.pdf">Download Resume</a>
                     <div class="button"><a href="#about-me">About me</a></div>  
                 </div>
                 <div class="socials">
