--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>My name is Sekou Traore. I am a Mobile Application, and Web Developer.</p>
             </div>
             <div class="headshot-container">
-                <img class="headshot" src="src/sekou.jpg" alt="Sekou's photo"/>
+                <img class="headshot" src="src/sek2_edited.jpg" alt="Sekou's photo"/>
             </div>
         </section>
         <section id="project" class="sub-section-alternative">
