--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="hero-text">
                     <h1>Sekou Traore</h1>
                     <p>Full Stack Developer</p>
-                    <a target="_blank" href="resumeSD.pdf">Download Resume</a>
+                    <a target="_blank" href="resumeSD.docx">Download Resume</a>
                     <div class="button"><a href="#about-me">About me</a></div>  
                 </div>
                 <div class="socials">
