--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="hero-text">
                     <h1>Sekou Traore</h1>
                     <p>Full Stack Developer</p>
-                    <a target="_blank" href="resumeSD.docx">Download Resume</a>
+                    
                     <div class="button"><a href="#about-me">About me</a></div>  
                 </div>
                 <div class="socials">
@@ -133,6 +133,7 @@
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
             Check out my<a href="https://100prein.github.io/captcoldmedia.github.io/"> <p style="color: blue"> Media Website</p></a><br/>
             Check out<a href="https://100prein.github.io/captcoldart.github.io/"><p style="color: red"> my Arts</p> </a>
+            <a target="_blank" href="/src/resumeSD.pdf">Download Resume</a>
         </footer>
         
         <script src="src/app.js" async defer></script>
