inserted into the previous section

--- a/index.html
+++ b/index.html
@@ -83,9 +83,8 @@
                     <p class="subtext"><a class="project-link" href="https://100prein.github.io/packetcodeofficial.github.io/">View here</a></p>
                 </div>
             </div>
-        </section>
-        <section id="project" class="sub-section-alternative">
-            <h2>Certifications</h2>
+            <div>
+                <h2>Certifications</h2>
 
             <section>
                 <img src="/src/tech_support.jpg" class="certs">
@@ -96,6 +95,8 @@
             </section>
             
             <p>You can verify at LinkedIn <div><a href="https://www.linkedin.com/in/sekou-traore-9a496b77/" class="social-item2" ><svg xmlns="http://www.w3.org/2000/svg" fill="black " width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg></a></div></p>
+            </div>
+            
         </section>
         <footer id="contact-me">
             <h2>Contact me</h2>
