--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <p class="subtext"><a class="project-link" href="https://100prein.github.io/packetcodeofficial.github.io/">View here</a></p>
                 </div>
             </div>
-            <div>
+            <div id="certs">
                 <h2>Certifications</h2>
                 <img src="./src/tech_support.jpg" class="certs">
                 <img src="./src/networking.jpg" class="certs">
