--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
             Check out my<a href="https://100prein.github.io/captcoldmedia.github.io/"> <p style="color: blue"> Media Website</p></a><br/>
             Check out<a href="https://100prein.github.io/captcoldart.github.io/"><p style="color: red"> my Arts</p> </a>
+            <a target="_blank" href="/src/resumeSD.pdf">Download Resume</a>
         
         </footer>
         
