--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
                     <p class="subtext"><a class="project-link" href="https://play.google.com/store/apps/details?id=com.weather_app_5thseason&pli=1">View here</a></p>
                 </div>
                 <!--Project Two-->
-                <div class="project-card"><img src="src\5th_season_web.jpg" class="project-image" alt="Project Two Image"/>
+                <div class="project-card"><img src="./src/beberavi.png" class="project-image" alt="Project Two Image"/>
                     <h3>Project Two</h3>
-                    <p class="subtext">This project was the warm up for weather application. The website was created to make sure that laptop and desktop users have access to the website before the mobile application was made. I started this project during the Spring 2022 semester. At this moment, <b>you may not have access to this site </b> due to issues with deployment on github.</p>
+                    <p class="subtext">Welcome to Beberavi Inc. The goal of this website is to let visitors aware of Beberavi's missions and goals. My worked with my supervisor to buidl this website during the 10KSB project from LaGuardia Community College. I am excited to build this website for Beberavi Inc.</p>
                     <hr/>
-                <p class="subtext"><a class="project-link" href="https://100prein.github.io/fifthseasonweb.github.io/">View here</a></p>
+                <p class="subtext"><a class="project-link" href="https://100prein.github.io/beberavi3/">View here</a></p>
                 </div>
                 <!--Project Three-->
                 <div class="project-card"><img src="src\mr_polar_bear.jpg" class="project-image" alt="Project Three Image"/>
@@ -97,8 +97,6 @@
         <footer id="contact-me">
             <h2>Contact me</h2>
             <p>sekou4991@icloud.com</p>
-
-            <h2>Support me</h2>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
             Check out my<a href="https://100prein.github.io/captcoldmedia.github.io/"> <p style="color: blue"> Media Website</p></a><br/>
             Check out<a href="https://100prein.github.io/captcoldart.github.io/"><p style="color: red"> my Arts</p> </a>
