added more content and details for LinkUps

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <title>ePortfolio</title>
+        <link rel="icon" type="image/x-icon" href="./src/100prein.jpg">
         <link rel="stylesheet" href="src/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,400;0,800;1,500;1,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fcd93b617c.js" crossorigin="anonymous"></script>
@@ -12,15 +13,16 @@
     <body>
         <section class="hero">
             <nav>
+                <button class="hamburger" id="hamburger">
+                    <i class="fas fa-bars"></i>
+                </button>
                 <ul id="nav-list">
                     <li><a href="#about-me">About me</a></li>
                     <li><a href="#project">Projects</a></li>
                     <li><a href="#contact-me">Contact</a></li>
                     <li><a href="#certs">Certifications</a></li>
                 </ul>
-                <button class="hamburger" id="hamburger">
-                    <i class="fas fa-bars"></i>
-                </button>
+                
             </nav>
             <div class="hero-area">
                 <div class="hero-text">
@@ -79,7 +81,9 @@
                         <p class="subtext"><a class="project-link" href="linkups.html" target="_blank">View here</a></p>
                     </div>
                 </div>
-                <<div class="project-card"><img src="./src/careerization_img.png" class="project-image" alt="Project Three Image"/>
+
+                <!--Project Four-->
+                <div class="project-card"><img src="./src/careerization_img.png" class="project-image" alt="Project Three Image"/>
                     <h3>careerization</h3>
                     <p class="subtext">Created by Sekou and my classmate, Gina Leon. Careerization is a service that assists students find or confirm their path to prefession. It provides assessments to help find their career, various paths to select, checklist on their plans, information about their role model etc... </p>
                     <hr/>
