Changed text to white

--- a/linkups.html
+++ b/linkups.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="all_text">
     <head>
         <meta charset="UTF-8">
         <script src="./app.js"></script>
