displaying menu options

--- a/linkups.html
+++ b/linkups.html
@@ -14,27 +14,27 @@
     <body>
         <section class="hero_linkups">
             <nav>
-            <!--<button id="menu-toggle">Toggle Menu</button>-->
-            <ul id="nav-list">
-                <li class="dropdown">
-                  <a href="#" class="dropbtn">Sections</a>
-                  <div class="dropdown-content">
-                    <a href="./index.html">Home</a>
-                    <a href="#introduction">Introduction</a>
-                    <a href="#goals">Project Goals</a>
-                    <a href="#design">Design and Development Process</a>
-                    <a href="#functionality">Feature and Functionality</a>
-                    <a href="#roles">Technologies Used and Roles</a>
-                    <a href="#challenges">Challenges and Solutions</a>
-                    <a href="#conclusion">Conclusion</a>
-                  </div>
-                </li>
-              </ul>
-              
+                <!--<button id="menu-toggle">Toggle Menu</button>-->
                 <button class="hamburger" id="hamburger">
                     <i class="fas fa-bars"></i>
                 </button>
+                <ul class="linkup_nav">
+                    <li class="dropdown">
+                    <a href="#" class="dropbtn">Sections</a>
+                        <div class="dropdown-content">
+                            <a href="./index.html">Home</a>
+                            <a href="#introduction">Introduction</a>
+                            <a href="#goals">Project Goals</a>
+                            <a href="#design">Design and Development Process</a>
+                            <a href="#functionality">Feature and Functionality</a>
+                            <a href="#roles">Technologies Used and Roles</a>
+                            <a href="#challenges">Challenges and Solutions</a>
+                            <a href="#conclusion">Conclusion</a>
+                        </div>
+                    </li>
+                </ul>
             </nav>
+            
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Linkups</h1>
