--- a/linkups.html
+++ b/linkups.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <title>Linkups</title>
-        <link rel="icon" type="image/x-icon" href="./src/100prein.jpg">
+        <link rel="icon" type="image/x-icon" href="./src/linkups_logo_blue.png">
         <link rel="stylesheet" href="src/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,400;0,800;1,500;1,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fcd93b617c.js" crossorigin="anonymous"></script>
@@ -15,9 +15,6 @@
         <section class="hero_linkups">
             <nav>
                 <!--<button id="menu-toggle">Toggle Menu</button>-->
-                <button class="hamburger" id="hamburger">
-                    <i class="fas fa-bars"></i>
-                </button>
                 <ul class="linkup_nav">
                     <li class="dropdown">
                     <a href="#" class="dropbtn">Sections</a>
