--- a/careerization.html
+++ b/careerization.html
@@ -1,107 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html class="all_text_career">
     <head>
         <meta charset="UTF-8">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <title>ePortfolio</title>
+        <title>Careerization</title>
+        <link rel="icon" type="image/x-icon" href="./career/career_logo.png">
         <link rel="stylesheet" href="src/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,300;0,400;0,800;1,500;1,700&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/fcd93b617c.js" crossorigin="anonymous"></script>
     </head>
     <body>
-        <section class="hero2">
+        <section class="hero_career">
             <nav>
-                <ul id="nav-list">
-                    <li><a href="#about-me">About me</a></li>
-                    <li><a href="#project">Projects</a></li>
-                    <li><a href="#contact-me">Contact</a></li>
-                    <li><a href="#certs">Certifications</a></li>
+                <!--<button id="menu-toggle">Toggle Menu</button>-->
+                <ul class="linkup_nav">
+                    <li class="dropdown">
+                    <a href="#" class="dropbtn">Sections</a>
+                        <div class="dropdown-content">
+                            <a href="./index.html">Home</a>
+                            <a href="#introduction">Introduction</a>
+                            <a href="#key_tasks">Key Tasks</a>
+                            <a href="#design">Design and Development Process</a>
+                            <a href="#functionality">Feature and Functionality</a>
+                            <a href="#roles">Technologies Used and Roles</a>
+                            <a href="#challenges">Challenges and Solutions</a>
+                            <a href="#conclusion">Conclusion</a>
+                        </div>
+                    </li>
                 </ul>
-                <button class="hamburger" id="hamburger">
-                    <i class="fas fa-bars"></i>
-                </button>
             </nav>
             <div class="hero-area">
                 <div class="hero-text">
                     <h1>Careerization</h1>
                     <p>Everyone deserves a profession!</p>
-                    
-                    <div class="button"><a href="#about-me">About me</a></div>  
                 </div>
                 <div class="socials">
-                    <div><a href="https://twitter.com/100prein" class="social-item"><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg></a></div>
+                    <div><a href="https://twitter.com/100prein" class="social-item"><svg xmlns="http://www.w3.org/2000/svg" fill="#2B756F" width="50" height="50" viewBox="0 0 24 24"><path d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z"/></svg></a></div>
 
-                    <div><a href="https://github.com/100prein" class="social-item" ><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm2.218 18.616c-.354.069-.468-.149-.468-.336v-1.921c0-.653-.229-1.079-.481-1.296 1.56-.173 3.198-.765 3.198-3.454 0-.765-.273-1.389-.721-1.879.072-.177.312-.889-.069-1.853 0 0-.587-.188-1.923.717-.561-.154-1.159-.231-1.754-.234-.595.003-1.193.08-1.753.235-1.337-.905-1.925-.717-1.925-.717-.379.964-.14 1.676-.067 1.852-.448.49-.722 1.114-.722 1.879 0 2.682 1.634 3.282 3.189 3.459-.2.175-.381.483-.444.936-.4.179-1.413.488-2.037-.582 0 0-.37-.672-1.073-.722 0 0-.683-.009-.048.426 0 0 .46.215.777 1.024 0 0 .405 1.25 2.353.826v1.303c0 .185-.113.402-.462.337-2.782-.925-4.788-3.549-4.788-6.641 0-3.867 3.135-7 7-7s7 3.133 7 7c0 3.091-2.003 5.715-4.782 6.641z"/></svg></a></div>
+                    <div><a href="https://github.com/100prein" class="social-item" ><svg xmlns="http://www.w3.org/2000/svg" fill="#2B756F" width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm2.218 18.616c-.354.069-.468-.149-.468-.336v-1.921c0-.653-.229-1.079-.481-1.296 1.56-.173 3.198-.765 3.198-3.454 0-.765-.273-1.389-.721-1.879.072-.177.312-.889-.069-1.853 0 0-.587-.188-1.923.717-.561-.154-1.159-.231-1.754-.234-.595.003-1.193.08-1.753.235-1.337-.905-1.925-.717-1.925-.717-.379.964-.14 1.676-.067 1.852-.448.49-.722 1.114-.722 1.879 0 2.682 1.634 3.282 3.189 3.459-.2.175-.381.483-.444.936-.4.179-1.413.488-2.037-.582 0 0-.37-.672-1.073-.722 0 0-.683-.009-.048.426 0 0 .46.215.777 1.024 0 0 .405 1.25 2.353.826v1.303c0 .185-.113.402-.462.337-2.782-.925-4.788-3.549-4.788-6.641 0-3.867 3.135-7 7-7s7 3.133 7 7c0 3.091-2.003 5.715-4.782 6.641z"/></svg></a></div>
 
-                    <div><a href="https://www.linkedin.com/in/sekou-traore-9a496b77/" class="social-item" ><svg xmlns="http://www.w3.org/2000/svg" fill="#ffffff" width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg></a></div>
+                    <div><a href="https://www.linkedin.com/in/sekou-traore-9a496b77/" class="social-item" ><svg xmlns="http://www.w3.org/2000/svg" fill="#2B756F" width="50" height="50" viewBox="0 0 24 24"><path d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm-2 16h-2v-6h2v6zm-1-6.891c-.607 0-1.1-.496-1.1-1.109 0-.612.492-1.109 1.1-1.109s1.1.497 1.1 1.109c0 .613-.493 1.109-1.1 1.109zm8 6.891h-1.998v-2.861c0-1.881-2.002-1.722-2.002 0v2.861h-2v-6h2v1.093c.872-1.616 4-1.736 4 1.548v3.359z"/></svg></a></div>
                 </div>
             </div>
         </section>
 
         <!--Introduction and Goal-->
 
-        <section class="sub-section" id="about-me">
-            <div>
+        <section class="project_career" >
+            <div id="introduction">
                 <h2>Introduction</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="description">Careerization is an online interface designed to assist users in discovering their ideal career and provide them guidance on the necessary steps to become a professional in their chosen field.</p><p class="description">Our project will help users find their career and become professionals. Many people are not familiar with what the path they should take to gain skills and knowledge on their careers, so we are here to ensure their options and paths. Our service is available on the website and mobile applications.</p>
             </div>
-            <div>
-                <h2>Project Goals</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div id="key_tasks">
+                <h2>Key Tasks of the Web Application</h2>
+                <p class="description">
+                    <ol class="making_points">
+                        <li>Includes famous people’s paths and steps they took so you can have ideas. </li>
+                        <li>Collect user information such as education, work experience, and personal preferences to determine potential career paths.</li>
+                        <li>Use machine learning algorithms and human expertise to match users with career options that align with their interests, skills, and goals.</li>
+                        <li>Provide detailed information on each career option, including salary expectations, job responsibilities, and educational requirements.</li>
+                        <li> Offer guidance on the necessary steps to achieve professional success in a chosen career, such as online courses, certification programs, and industry events.</li>
+                        <li>Allow users to save and compare their preferred career options for future reference.</li>
+                        <li>Connect users with professionals in their chosen career for mentorship or networking opportunities.</li>
+
+                        <li>Provide personalized recommendations for job openings based on the user's skills and qualifications.</li>
+                        <li>Monitor the user's progress in achieving their career goals and provide feedback or suggestions for improvement. </li>
+                        <li>Continuously update the career options and resources available on the platform based on current job market trends and industry developments. </li>
+                    </ol>
+                </p>
             </div>
         </section>
 
         <!--Design and Development Process / Features and Functionality-->
-        <section class="sub-section" id="about-me">
-            <div>
+        <section class="project_career">
+            <div id="design">
                 <h2>Design and Development Process</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="description">I began looking at other assessment websites to get ideas from each. Then I begin to design the website with trails and errors until I got what is unique. The website is able to connect to our database however, our assessment page is incomplete and I will continue to design it.</p>
             </div>
-            <div>
+            <div id="functionality">
                 <h2>Features and Functionality</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="description">Linkups will be access on our website and mobile applications. We have hosted our website on Github testing and feedback. Users can book any event on the homepage of our website. Upon RSVPying an event, a section of the booking page will suggest some precautions and tools to use depending on what type of event they are going to. They will be able to search for any events with filtering functionality such as earliest date, nearest location and event type. </p>
             </div>
         </section>
 
         <!--Technologies Used / Your Role-->
-        <section class="sub-section" id="about-me">
-            <div>
-                <h2>Technologies Used</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <div>
-                <h2>My Role</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <section class="project_career">
+            <div id="roles">
+                <h2>Technologies Used and Roles</h2>
+                <p class="description"> My partner started the project with HTML, and CSS; Then I proceeded with PHP. We used Visual Studio Code to do our work. When it was time to use a database, I created a database on <abbr title="MySQL Workbench is a unified visual tool for database architects, developers, and Database Administrators. MySQL Workbench provides data modeling, SQL development, and comprehensive administration tools for server configuration, user administration, backup, and much more.">Workbench</abbr> that connected to our website and use MySQL to modify data.  </p><p class="description">I was responsible for the back-end, managing database and connecting it to our website. My partner was responsible for the front-end, designing, structuring and styling our website.</p>
+                
             </div>
         </section>
  
         <!--Challenges and Solutions / Results and Impact-->
-        <section class="sub-section" id="about-me">
-            <div>
+        <section class="project_career">
+            <div id="challenges">
                 <h2>Challenges and Solutions</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="description"> The challenges we had with the project was sharing the files through cloud. We did not have time to meet in person to do the project, so I compressed the files for our website and send it to her to manage to front-end.</p>
+                <p class="description">Few days later, her Visual Code Studio was not able to work on our project. I requested her to send me the compressed files so I can take over the front-end.</p>
+                <p class="description">I was using PHP to connect to two tables in my Database on Workbench; however, the second table was not working. It took me several days to figure it out. I took a break from it as I was getting cranky. When I returned, I notice the ID of each tables are identical. I renamed the id of the second table different than the first one, and it worked like heaven!</p>
             </div>
-            <div>
+            <!--<div>
                 <h2>Results and Impact</h2>
                 <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+            </div>-->
         </section>
 
          <!--Conclusions-->
-         <section class="sub-section" id="about-me">
-            <div>
+         <section class="project_career">
+            <div id="conclusion">
                 <h2>Conclusion</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <p class="description">Our project was a success not just because of knowledge and experience but with my classmates who were willing to work together and complete their assigned tasks. I want them to succeed as well as they want me to succeed in this project. Throughout the semester, we understood what are our problems and overcome them by figuring out to solve or improvise. With empathy, I assisted some of classmates to complete their tasks as school and work took over their schedule sometimes as well as they assisted me with my tasks I should have completed. Without them, this project would be near impossible to meet the deadline. I am so proud of the work we have done as a member of team 1! </p>
             </div>
         </section>
 
-        <section class="sub-section" id="about-me">
+        <section class="sub-section_career" id="about-me">
             <p><a href="https://github.com/100prein/careerization" target="_blank">Check on Github</a></p>
             <p><a href="https://100prein.github.io/beberavi3/" target="_blank">Check My video</a></p> <h5>(It is a dynamic website, it is not avaible on Github Page)</h5>
-        </section>
-        <section id="project" class="sub-section-alternative sub-section">
-            <a href="https://github.com/100prein/careerization" target="_blank"></a>
         </section>
         <footer id="contact-me">
             <h2>Contact me</h2>
