Added video link 1

--- a/careerization.html
+++ b/careerization.html
@@ -117,7 +117,7 @@
 
         <section class="sub-section_career" id="about-me">
             <p><a href="https://github.com/100prein/careerization" target="_blank">Check on Github</a></p>
-            <p><a href="https://100prein.github.io/beberavi3/" target="_blank">Check My video</a></p> <h5>(It is a dynamic website, it is not avaible on Github Page)</h5>
+            <p><a href="https://drive.google.com/file/d/16XqVwA4W023fH0hUr1QBvIkXRlHn5evF/view?usp=sharing" target="_blank">Check My video</a></p> <h5>(It is a dynamic website, it is not avaible on Github Page)</h5>
         </section>
         <footer id="contact-me">
             <h2>Contact me</h2>
