beberavi and certs

--- a/careerization.html
+++ b/careerization.html
@@ -120,13 +120,9 @@
             <p><a href="https://drive.google.com/file/d/16XqVwA4W023fH0hUr1QBvIkXRlHn5evF/view?usp=sharing" target="_blank">Check My video</a></p> <h5>(It is a dynamic website, it is not avaible on Github Page)</h5>
         </section>
         <footer id="contact-me">
-            <h2>Contact me</h2>
-            <p>sekou4991@icloud.com</p>
+            <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            Check out my<a href="https://100prein.github.io/captcoldmedia.github.io/"> <p style="color: blue"> Media Website</p></a><br/>
-            Check out<a href="https://100prein.github.io/captcoldart.github.io/"><p style="color: red"> my Arts</p> </a>
-            <a target="_blank" href="./src/resumeSD.pdf">Download Resume</a>
-        
+            <p><a target="_blank" href="./src/resumeSD.pdf">Download Resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
