--- a/beberavi.html
+++ b/beberavi.html
@@ -128,7 +128,7 @@
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            <p><a target="_blank" href="./src/resumeSD.pdf">Download Resume</a></p>
+            <p><a target="_blank" href="./src/Sekou_Traore.pdf">Download Resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
