corrections, navigations and cleanup

--- a/beberavi.html
+++ b/beberavi.html
@@ -22,11 +22,7 @@
                             <a href="./index.html">Home</a>
                             <a href="#introduction">Introduction</a>
                             <a href="#goals">Project Goals</a>
-                            <a href="#design">Design and Development Process</a>
-                            <a href="#functionality">Feature and Functionality</a>
-                            <a href="#roles">Technologies Used and Roles</a>
-                            <a href="#challenges">Challenges and Solutions</a>
-                            <a href="#conclusion">Conclusion</a>
+                            <a href="careerization.html">Next project</a>
                         </div>
                     </li>
                 </ul>
@@ -53,7 +49,7 @@
         <section class="project_beberavi" >
             <div id="introduction">
                 <h2>Introduction</h2>
-                <p class="description">Beberavi Collections is a fashion brand that offers high quality clothes for children, women and home decorations handwoven, sewed, knitted and crochetted from Kenya, Nakuru. </p><p class="description">Our website website let the users aware of what we do and what our missions are. As an intern, I focused on developing a website for Beberavi that speaks its brand and deliver its story to the world. </p>
+                <p class="description">Beberavi Collections is a fashion brand that offers high quality clothes for children, women and home decorations handwoven, sewed, knitted and crochetted from Kenya, Nakuru. </p><p class="description">Our website the users aware of what we do and what our missions are. As an intern, I focused on developing a website for Beberavi that speaks its brand and deliver its story to the world. </p>
             </div>
         </section>
         <section class="project_beberavi" >
@@ -70,57 +66,6 @@
                 </p>
             </div>
         </section>
-
-
-        <!--Design and Development Process / Features and Functionality
-        <section class="project_beberavi">
-            <div id="design">
-                <h2>Design and Development Process</h2>
-                <p class="description">We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community. </p><img class="project_demo" src="./linkups/brainstorming_1.png" alt="brainstorming doc"><div><caption>Brainstorming our Ideas</caption></div>
-                <img class="project_demo" src="./linkups/brainstorming_2.png" alt="brainstorming doc"><div><caption>Brainstorming extended</caption></div>
-                <p class="description">In our second class meeting with our professor, I was assigned to lead team one. I assigned multiple roles to my teammates. Leon was a chatbot developer, Sebastian was a powerpoint creator, Hemraj was a writer, Kevin was a web designer and I was a project manager. Roles were not limited to what was aasigned as our professor gave us activities to complete for our project. We eventually got our project name and created a <a href="./linkups/project_proposal.pdf"> project proposal</a> for Linkups. We continued with vision and mission statements followed by Gantt chart.</p><img class="project_demo" src="./linkups/gantt_chart.png" alt="Gantt Chart"><div><caption>Gantt Chart on Project Libre</caption></div>
-            </div>
-            <div id="functionality">
-                <h2>Features and Functionality</h2>
-                <p class="description">Linkups will be access on our website and mobile applications. We have hosted our website on Github testing and feedback. Users can book any event on the homepage of our website. Upon RSVPying an event, a section of the booking page will suggest some precautions and tools to use depending on what type of event they are going to. They will be able to search for any events with filtering functionality such as earliest date, nearest location and event type. </p>
-            </div>
-        </section>
-
-        <!--Technologies Used / Your Role-->
-        <!--<section class="project_beberavi">
-            <div id="roles">
-                <h2>Technologies Used and Roles</h2>
-                <p class="description"> <abbr title="It is a program developed by The Project Libre community to assist users with tracking the progress of their projects. " >Project Libre</abbr> was used for creating a <abbr title="Henry L. Gantt, a mechanical engineer and management consultant, developed Gantt charts almost 100 years ago. His goal was to design a chart that could show planned and actual progress on a project. A Gantt chart is a horizontal bar chart that represents a set of tasks. ">Gantt chart</abbr> , Google Docs, Microsoft Word were used for writing our notes, project proposal, scripts etc..., Google Sheets was used to make <abbr title="A decision table is a scheduled rule logic entry, in table format, that consists of conditions, represented in the row and column headings, and actions, represented as the intersection points of the conditional cases in the table. ">Decision Table,</abbr>  Visual Code Studio was used to create our website, MacInCloud is a virtual machine used for virtual MacOS, to develop an iOS application with SwiftUI, and Microsoft PowerPoint was used to present our project.</p>
-                <img class="project_demo" src="./linkups/ios_linkups.png" alt="Swift UI IDE">
-                <p class="description">Leon created a group channel on Microsoft Teams so we can share and centralize our files with tohe members.</p>
-                <p class="description">Sebastian used Lucid Chart to create <abbr title="A context diagram is a top-level view of an information system that shows the system’s boundaries and scope. "> Context Level Diagram </abbr>for Linkups.</p>
-                <p class="description">Kevin and Leon used Visual Studio Code for developing our Website and chatbot for user's assistance.</p>
-                <p class="description">I used Microsoft 365, Zoom, Whatsapp, Github and Project Libre to schedule weekly meetings, manage our Gantt Chart, communicate with the team and shared our website code online.</p>
-                
-            </div>
-        </section>
- 
-        <!--Challenges and Solutions / Results and Impact-->
-        <!--<section class="project_beberavi">
-            <div id="challenges">
-                <h2>Challenges and Solutions</h2>
-                <p class="description">Assigning roles to each members was one of my challenges. I was not able to assign roles to eavery member until we finished brainstorming, wrote our project proposal and watched an example of a final presentation from previous class. It roles and assignments are given as we go on with our project until the finish line.</p>
-                <p class="description">Every team member have different schedules, so I must come up with a schedule that suits everyone. I created couple of polls on Whatsapp to finally come up with a time to meet weekly. There were moments where we would meet twice a week during midterms.</p>
-                <p class="description">There were concerns about sharing our web design and chatbot for the presentation. I combined the Chatbot and our website. I used GitHub to share our code and live static website so anyone can visit it.</p>
-            </div>
-            <!--<div>
-                <h2>Results and Impact</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>-->
-        <!--</section>-->
-
-         <!--Conclusions-->
-         <!--<section class="project_beberavi">
-            <div id="conclusion">
-                <h2>Conclusion</h2>
-                <p class="description">Our project was a success not just because of knowledge and experience but with my classmates who were willing to work together and complete their assigned tasks. I want them to succeed as well as they want me to succeed in this project. Throughout the semester, we understood what are our problems and overcome them by figuring out to solve or improvise. With empathy, I assisted some of classmates to complete their tasks as school and work took over their schedule sometimes as well as they assisted me with my tasks I should have completed. Without them, this project would be near impossible to meet the deadline. I am so proud of the work we have done as a member of team 1! </p>
-            </div>
-        </section>-->
         <section class="sub-section_beberavi" id="about-me">
             <p><a class="link_beberavi" href="https://github.com/100prein/webPorject_github/tree/main" target="_blank">Check on Github</a></p>
             <p><a class="link_beberavi" href="https://100prein.github.io/webPorject_github/" target="_blank">Check on Github Web</a></p>
@@ -128,7 +73,7 @@
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            <p><a target="_blank" href="./src/Sekou_Traore.pdf">Download Resume</a></p>
+            <p><a target="_blank" href="./src/Sekou_Traore.pdf">View my resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
