--- a/index.html
+++ b/index.html
@@ -87,14 +87,6 @@
                     <hr/>
                     <p class="subtext"><a class="project-link" href="careerization.html">View here</a></p>
                 </div>
-
-                <!--Project Four-->
-                <!--<div class="project-card"><img src="src\smoking_art_technology.jpg" class="project-image" alt="Project Four Image"/>
-                    <h3>Smoking Art Tech</h3>
-                    <p class="subtext">My friend came up with an idea for creating a new business for us. I included some way to add images to the shopping cart and purchase them. The project started during Spring 2022. We are setting a plan to start our business.</p>
-                    <hr/>
-                    <p class="subtext"><a class="project-link" href="https://100prein.github.io/packetcodeofficial.github.io/" >View here</a></p>
-                </div>-->
             </div>
         </section>
         <section class="sub-section-alternative sub-section">
@@ -110,7 +102,7 @@
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            <p><a target="_blank" href="./src/Sekou_Traore.pdf">Download Resume</a></p>
+            <p><a target="_blank" href="./src/Sekou_Traore.pdf">View my resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
