--- a/linkups.html
+++ b/linkups.html
@@ -27,6 +27,7 @@
                             <a href="#roles">Technologies Used and Roles</a>
                             <a href="#challenges">Challenges and Solutions</a>
                             <a href="#conclusion">Conclusion</a>
+                            <a href="5thseason.html">Next project</a>
                         </div>
                     </li>
                 </ul>
@@ -125,7 +126,7 @@
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            <p><a target="_blank" href="./src/Sekou_Traore.pdf">Download Resume</a></p>
+            <p><a target="_blank" href="./src/Sekou_Traore.pdf">View my resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
