--- a/careerization.html
+++ b/careerization.html
@@ -26,6 +26,7 @@
                             <a href="#roles">Technologies Used and Roles</a>
                             <a href="#challenges">Challenges and Solutions</a>
                             <a href="#conclusion">Conclusion</a>
+                            <a href="linkups.html">Next project</a>
                         </div>
                     </li>
                 </ul>
@@ -101,10 +102,7 @@
                 <p class="description">Few days later, her Visual Code Studio was not able to work on our project. I requested her to send me the compressed files so I can take over the front-end.</p>
                 <p class="description">I was using PHP to connect to two tables in my Database on Workbench; however, the second table was not working. It took me several days to figure it out. I took a break from it as I was getting cranky. When I returned, I notice the ID of each tables are identical. I renamed the id of the second table different than the first one, and it worked like heaven!</p>
             </div>
-            <!--<div>
-                <h2>Results and Impact</h2>
-                <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>-->
+           
         </section>
 
          <!--Conclusions-->
@@ -122,7 +120,7 @@
         <footer id="contact-me">
             <p><a href="mailto:sekou4991@icloud.com">sekou4991@icloud.com</a></p><br>
             <p><a href="https://www.buymeacoffee.com/sekou359?new=1">Buy me a Coffee</a></p><br/>
-            <p><a target="_blank" href="./src/Sekou_Traore.pdf">Download Resume</a></p>
+            <p><a target="_blank" href="./src/Sekou_Traore.pdf">View my resume</a></p>
         </footer>
         
         <script src="src/app.js" async defer></script>
