--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
         <section class="sub-section-alternative sub-section">
             <div id="certs">
                 <h2>Certifications</h2>
-                <div><img src="./src/tech_support.jpg" class="project_demo"> <p>I learned the importance of tech support with professionalism. I should not focus on troubleshooting and problem solving but also empathy, patience and understanding</p> </div>
-                <div><img src="./src/networking.jpg" class="project_demo"><p>The Bits and Bytes of Computer Networking course was the challenging course I ever took. Five-Layer model, TCP/IP communications, network troubleshooting tools and techniques, DNS and DHCP, and cloud computing are the concepts I learned.</p></div>
-                <div><img src="./src/operating_system.jpg" class="project_demo"><p>We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community.</p></div>
-                <div><img src="./src/sys_admin.jpg" class="project_demo"><p>We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community.</p></div>
-                <div><img src="./src/google_IT_cert.jpg" class="project_demo"><p>We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community.</p></div>
+                <div class="cert_section"><img src="./src/tech_support.jpg" class="project_demo"> <p>I learned the importance of tech support with professionalism. I should not focus on troubleshooting and problem solving but also empathy, patience and understanding</p> </div>
+                <div class="cert_section"><img src="./src/networking.jpg" class="project_demo"><p>The Bits and Bytes of Computer Networking course was the challenging course I ever took. Five-Layer model, TCP/IP communications, network troubleshooting tools and techniques, DNS and DHCP, and cloud computing are the concepts I learned.</p></div>
+                <div class="cert_section"><img src="./src/operating_system.jpg" class="project_demo"><p>I practiced managing file systems with Linux command line. I learned new skills which helped me do well on MAC232 Unix Network Operating System.  </p></div>
+                <div class="cert_section"><img src="./src/sys_admin.jpg" class="project_demo"><p>At the end of the course, I am able to utilize best practices for choosing hardware, vendors, and services for my organization; understand how the most common infrastructure services that keep an organization running work, and how to manage infrastructure servers</p></div>
+                <div class="cert_section"><img src="./src/dark_art.png" class="project_demo"><p> I learn how various encryption algorithms and techniques work as well as their benefits and limitations, various authentication systems and types, the difference between authentication and authorization, and how to evaluate potential risks and recommend ways to reduce risk.</p></div>
+                <div class="cert_section"><img src="./src/google_IT_cert.jpg" class="project_demo"><p>We began our project with brainstorming. It took us a week before we come up with a solution to a problem we need to solve in our community.</p></div>
             </div>
         </section>
         <footer id="contact-me">
